# translation-service

./: .gitignore  LICENSE  README.md  TRANSLATION_SERVICE_CHEATSHEET.md  app.py  arabic_translation_checker.py  chat_extractor.py  docker-compose.yml  docx_writer.py  english_arabic_translator.py  enhanced_pdf_extractor.py  example.py  example_client.py  example_request.py  example_usage.py  example_usage_enhanced.py  explained_project.txt  gpt_translator.py  grammar_corrector.py  grammar_enhanced_translator.py  handwriting_recognizer.py  lambda_handler.py  language_detector.py  language_tool_checker.py  nginx.conf  ocr_processor.py  openai_client.py  pdf_extractor.py  pdf_summarizer.py  pdf_table_extractor.py  pdf_writer.py  project_structure.txt  pyproject.toml  requirements.txt  roadmap_of_project.txt  run.py  run_streamlit.py  serverless.yml  smart_pdf_extractor.py  summarizer.py  (+3 more)
.streamlit/: config.toml
app/: config.py  main.py
app/api/: alternative_translations.py  auth.py  chat_translation.py  favorites.py  pdf_translation.py  router.py  translate.py  translation.py  translation_history.py  translation_notification.py  translation_quality.py  translation_rating.py  translation_stats.py  translation_suggestions.py  translation_votes.py  votes.py
app/auth/: auth.py
app/core/: config.py  email.py
app/data/: academic_terms.json  legal_terms.json  medical_terms.json
app/database/: translation_history.py
docker/: Dockerfile  docker-compose.yml
frontend/: app.py
src/: App.css  App.jsx  __init__.py  pdf_processor.py  translator.py
(+19 files in other folders)
